Renamed project to Agility Design

--- a/examples/01-grids.html
+++ b/examples/01-grids.html
@@ -1,20 +1,20 @@
 <!--
-   Simplicity Design made by Mads T. Kristiansen, 2019.
+   Agility Design made by Mads T. Kristiansen, 2019.
   
-   This file is part of Simplicity Design.
+   This file is part of Agility Design.
   
-   Simplicity Design is free software; you can redistribute it and/or modify
+   Agility Design is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published
    by the Free Software Foundation; either version 2 of the License,
    or (at your option) any later version.
  
-   Simplicity Design is distributed in the hope that it will be useful,
+   Agility Design is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
  
    You should have received a copy of the GNU General Public License
-   along with Simplicity Design. If not, see <http://www.gnu.org/licenses/>.
+   along with Agility Design. If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!doctype html>
@@ -25,7 +25,7 @@
 
 		<title>Example 01 - Grids</title>
 
-		<link rel="stylesheet" href="../css/simplicity-design.css">
+		<link rel="stylesheet" href="../css/agility-design.min.css">
 		<link rel="stylesheet" href="../css/skins/default.css">
 	</head>
 	<body>
@@ -66,7 +66,7 @@
 
 			<div class="container">
 				<span class="text-center info-field" style="margin-top: 3em;">
-					This is how simple grids are setup using Simplicity Design. While similar to Bootstrap and Foundation, the changes required to change the grid preset are more managable. This is because the entire grid has a size set on creation, which will apply to the following column elements.<br><br>
+					This is how simple grids are setup using Agility Design. While similar to Bootstrap and Foundation, the changes required to change the grid preset are more managable. This is because the entire grid has a size set on creation, which will apply to the following column elements.<br><br>
 					To see the effects on grid presets, resize the browser window and see the how the grids react, according to their size preset.
 				</span>
 			</div>
@@ -95,7 +95,7 @@
 				</div>
 				<div class="col-4">
 					<div class="panel panel-clear">
-						<h4 class="panel-header text-center center">Simplicity Design</h4>
+						<h4 class="panel-header text-center center">Agility Design</h4>
 						<div class="panel-body">
 							<pre class="code-field"><code>
 <span>&lt;div class="<b>grid grid-small</b>"&gt;</span>
