--- a/examples/05-buttons.html
+++ b/examples/05-buttons.html
@@ -1,20 +1,20 @@
 <!--
-   Simplicity Design made by Mads T. Kristiansen, 2019.
+   Agility Design made by Mads T. Kristiansen, 2019.
   
-   This file is part of Simplicity Design.
+   This file is part of Agility Design.
   
-   Simplicity Design is free software; you can redistribute it and/or modify
+   Agility Design is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published
    by the Free Software Foundation; either version 2 of the License,
    or (at your option) any later version.
  
-   Simplicity Design is distributed in the hope that it will be useful,
+   Agility Design is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
  
    You should have received a copy of the GNU General Public License
-   along with Simplicity Design. If not, see <http://www.gnu.org/licenses/>.
+   along with Agility Design. If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!doctype html>
@@ -25,7 +25,7 @@
 
 		<title>Example 05 - Buttons</title>
 
-		<link rel="stylesheet" href="../css/simplicity-design.css">
+		<link rel="stylesheet" href="../css/agility-design.min.css">
 		<link rel="stylesheet" href="../css/skins/material.css">
 	</head>
 	<body>
@@ -57,14 +57,14 @@
 		</div>
 		<div class="container">
 			<h2 class="text-center">Clear Buttons</h2>
-			<button class="btn stack-for-phone btn-clear-white">White</button>
-			<button class="btn stack-for-phone btn-clear-black">Black</button>
-			<button class="btn stack-for-phone btn-clear-red">Red</button>
-			<button class="btn stack-for-phone btn-clear-green">Green</button>
-			<button class="btn stack-for-phone btn-clear-yellow">Yellow</button>
-			<button class="btn stack-for-phone btn-clear-blue">Blue</button>
-			<button class="btn stack-for-phone btn-clear-magenta">Magenta</button>
-			<button class="btn stack-for-phone btn-clear-cyan">Cyan</button>
+			<button class="btn btn-clear-white">White</button>
+			<button class="btn btn-clear-black">Black</button>
+			<button class="btn btn-clear-red">Red</button>
+			<button class="btn btn-clear-green">Green</button>
+			<button class="btn btn-clear-yellow">Yellow</button>
+			<button class="btn btn-clear-blue">Blue</button>
+			<button class="btn btn-clear-magenta">Magenta</button>
+			<button class="btn btn-clear-cyan">Cyan</button>
 		</div>
 		<div class="container">
 			<h2 class="text-center">Button Sizes</h2>
