--- a/examples/07-panels.html
+++ b/examples/07-panels.html
@@ -1,20 +1,20 @@
 <!--
-   Simplicity Design made by Mads T. Kristiansen, 2019.
+   Agility Design made by Mads T. Kristiansen, 2019.
   
-   This file is part of Simplicity Design.
+   This file is part of Agility Design.
   
-   Simplicity Design is free software; you can redistribute it and/or modify
+   Agility Design is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published
    by the Free Software Foundation; either version 2 of the License,
    or (at your option) any later version.
  
-   Simplicity Design is distributed in the hope that it will be useful,
+   Agility Design is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
  
    You should have received a copy of the GNU General Public License
-   along with Simplicity Design. If not, see <http://www.gnu.org/licenses/>.
+   along with Agility Design. If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!doctype html>
@@ -23,17 +23,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Example 08 - Panels</title>
+		<title>Example 07 - Panels</title>
 
-		<link rel="stylesheet" href="../css/simplicity-design.css">
+		<link rel="stylesheet" href="../css/agility-design.min.css">
 		<link rel="stylesheet" href="../css/skins/default.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="../js/simplicity-design.js"></script>
+		<script src="../js/agility-design.js"></script>
 	</head>
 	<body>
 		<div class="title-container container">
-			<h1 class="title text-center">Example 08</h1>
+			<h1 class="title text-center">Example 07</h1>
 			<h4 class="subtitle text-center">Panels</h4>
 		</div>
 		<div class="container text-center">
@@ -64,11 +64,9 @@
 			<ul class="list-group">
 				<li class="list-item">
 					First item
-					<span class="notification notification-tiny blue rounded">5</span>
 				</li>
 				<li class="list-item">
 					Second item
-					<span class="notification notification-tiny blue rounded">3</span>
 				</li>
 				<li class="list-item">
 					Third item
