--- a/examples/10-navigation.html
+++ b/examples/10-navigation.html
@@ -1,20 +1,20 @@
 <!--
-   Simplicity Design made by Mads T. Kristiansen, 2019.
+   Agility Design made by Mads T. Kristiansen, 2019.
   
-   This file is part of Simplicity Design.
+   This file is part of Agility Design.
   
-   Simplicity Design is free software; you can redistribute it and/or modify
+   Agility Design is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published
    by the Free Software Foundation; either version 2 of the License,
    or (at your option) any later version.
  
-   Simplicity Design is distributed in the hope that it will be useful,
+   Agility Design is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
  
    You should have received a copy of the GNU General Public License
-   along with Simplicity Design. If not, see <http://www.gnu.org/licenses/>.
+   along with Agility Design. If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!doctype html>
@@ -23,16 +23,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Example 11 - Navigation</title>
+		<title>Example 10 - Navigation</title>
 
-		<link rel="stylesheet" href="../css/simplicity-design.css">
+		<link rel="stylesheet" href="../css/agility-design.min.css">
 		<link rel="stylesheet" href="../css/skins/default.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="../js/simplicity-design.js"></script>
+		<script src="../js/agility-design.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-red medium">
+		<nav class="navbar navbar-red navbar-medium">
 			<img src="https://via.placeholder.com/150" class="icon"/>
 			<a class="navbar-item" href="#">Link</a>
 			<a class="navbar-item" href="#">Link</a>
@@ -40,7 +40,7 @@
 		</nav>
 
 		<div class="title-container container">
-			<h1 class="title text-center">Example 11</h1>
+			<h1 class="title text-center">Example 10</h1>
 			<h1 class="subtitle text-center">Navigation</h1>
 		</div>
 		<div class="container" style="margin-bottom: 50em;">
