Changed to development files in example files.

--- a/examples/01-grids.html
+++ b/examples/01-grids.html
@@ -25,8 +25,8 @@
 
 		<title>Example 01 - Grids</title>
 
-		<link rel="stylesheet" href="../css/agility-design.min.css">
-		<link rel="stylesheet" href="../css/skins/default.css">
+		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
+		<link rel="stylesheet" type="text/css" href="../css/skins/default.css" />
 	</head>
 	<body>
 		<div class="title-container container">
