--- a/examples/03-platfoms.html
+++ b/examples/03-platfoms.html
@@ -25,7 +25,7 @@
 
 		<title>Example 03 - Platforms</title>
 
-		<link rel="stylesheet" href="../css/agility-design.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/default.css">
 	</head>
 	<body>
