--- a/examples/05-buttons.html
+++ b/examples/05-buttons.html
@@ -25,7 +25,7 @@
 
 		<title>Example 05 - Buttons</title>
 
-		<link rel="stylesheet" href="../css/agility-design.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/material.css">
 	</head>
 	<body>
