--- a/examples/06-input.html
+++ b/examples/06-input.html
@@ -25,7 +25,7 @@
 
 		<title>Example 06 - Input</title>
 
-		<link rel="stylesheet" href="../css/agility-design.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/default.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
