--- a/examples/07-panels.html
+++ b/examples/07-panels.html
@@ -25,7 +25,7 @@
 
 		<title>Example 07 - Panels</title>
 
-		<link rel="stylesheet" href="../css/agility-design.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/default.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
