--- a/examples/09-notifications.html
+++ b/examples/09-notifications.html
@@ -25,7 +25,7 @@
 
 		<title>Example 09 - Notifications</title>
 
-		<link rel="stylesheet" href="../css/agility-design.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/default.css">
 	</head>
 	<body>
