Added badges to show JS-only features.

--- a/examples/07-panels.html
+++ b/examples/07-panels.html
@@ -51,6 +51,8 @@
 			</div>
 		</div>
 		<div class="container">
+			<h3 class="text-center">Callout</h3>
+			<h6 class="text-center text-regular">Callouts are also closable, if specified. <span class="notification notification-tiny notification-yellow">JS</span></h6>
 			<div class="callout callout-blue closable fade">
 				<button class="close" action="callout-close">&times;</button>
 				<h3>Title</h3>
@@ -70,7 +72,7 @@
 				</li>
 				<li class="list-item">
 					Third item
-					<span class="notification notification-tiny blue rounded">9+</span>
+					<span class="notification notification-tiny notification-blue rounded">9+</span>
 				</li>
 			</div>
 		</div>
