--- a/examples/06-input.html
+++ b/examples/06-input.html
@@ -157,7 +157,7 @@
 				</div>
 			</div>
 			<div class="container">
-				<h3>Closable alerts</h3>
+				<h3>Closable alerts <span class="notification notification-tiny rounded notification-yellow">JS</span></h3>
 				<div class="alert alert-red closable">
 					<strong>Alert.</strong> This is a closable alert. Press the 'X'!
 					<button class="close" action="alert-close">&times;</button>
