--- a/examples/06-input.html
+++ b/examples/06-input.html
@@ -163,9 +163,13 @@
 					<button class="close" action="alert-close">&times;</button>
 				</div>
 				<div class="alert alert-red closable fade">
-					<strong>Alert.</strong> This is a closable alert. Press the 'X'!
+					<strong>Alert.</strong> This is a <i>fading</i> closable alert. Press the 'X'!
 					<button class="close" action="alert-close">&times;</button>
 				</div>
+			</div>
+			<div class="container">
+				<h2>Tooltips <span class="notification notification-tiny rounded notification-yellow">JS</span></h2>
+				<a href="#" class="text-center" tooltip="" message="TOOOOOOOOOOOOLTIP">Hover me!</a>
 			</div>
 		</div>
 	</body>
