--- a/examples/04-communication.html
+++ b/examples/04-communication.html
@@ -27,8 +27,11 @@
 
 		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/default.css">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="../js/agility-design.js"></script>
 	</head>
-	<body>
+	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
 		<div class="communication-content-medium text-center">
 			<div class="communication-block communication-block-center">
 				<div class="container">
@@ -37,7 +40,7 @@
 					<h6 class="text-extrathin">Look like the big boys!</h6>
 				</div>
 			</div>
-			<div class="communication-block communication-block-center gradient">
+			<div class="communication-block communication-block-center background-blue">
 				<div class="container">
 					<h2 class="center color-white">Secondary.</h2>
 					<h6 class="center color-white text-extrathin">Try resizing the browser window or view from a mobile device.</h6>
