--- a/examples/06-input.html
+++ b/examples/06-input.html
@@ -31,7 +31,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="../js/agility-design.js"></script>
 	</head>
-	<body>
+	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
 		<div class="title-container container">
 			<h1 class="title text-center">Example 06</h1>
 			<h4 class="subtitle text-center">Input</h4>
