--- a/examples/10-navigation.html
+++ b/examples/10-navigation.html
@@ -31,11 +31,11 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="../js/agility-design.js"></script>
 	</head>
-	<body>
+	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
 		<nav class="navbar navbar-red navbar-medium">
 			<img src="https://via.placeholder.com/150" class="icon"/>
-			<a class="navbar-item" href="#">Link</a>
-			<a class="navbar-item" href="#">Link</a>
+			<a class="navbar-item" href="../index.html">Index</a>
+			<a class="navbar-item" href="../examples/">Examples</a>
 			<p class="navbar-item">Text</p>
 		</nav>
 
