--- a/examples/05-buttons.html
+++ b/examples/05-buttons.html
@@ -27,8 +27,11 @@
 
 		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/material.css">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="../js/agility-design.js"></script>
 	</head>
-	<body>
+	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
 		<div class="title-container container">
 			<h1 class="title text-center">Example 05</h1>
 			<h1 class="subtitle text-center">Buttons</h1>
