Updated simple animations to not run, when part of an animation group.
Animation groups interferred with simple animations, when part of a parent element.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
 		<div class="title-container container">
 			<h1 class="title text-center">Table of Contents</h1>
 			<h4 class="subtitle text-center">Agility Design</h4>
