Changed skin from material to default.

--- a/examples/01-grids.html
+++ b/examples/01-grids.html
@@ -68,10 +68,10 @@
 			</div>
 
 			<div class="container">
-				<span class="text-center info-field" style="margin-top: 3em;">
+				<p class="text-center info-field" style="margin-top: 3em;">
 					This is how simple grids are setup using Agility Design. While similar to Bootstrap and Foundation, the changes required to change the grid preset are more managable. This is because the entire grid has a size set on creation, which will apply to the following column elements.<br><br>
 					To see the effects on grid presets, resize the browser window and see the how the grids react, according to their size preset.
-				</span>
+				</p>
 			</div>
 
 			<h1 class="display4 text-center">Comparison</h1>
