--- a/examples/05-buttons.html
+++ b/examples/05-buttons.html
@@ -26,7 +26,7 @@
 		<title>Example 05 - Buttons</title>
 
 		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
-		<link rel="stylesheet" href="../css/skins/material.css">
+		<link rel="stylesheet" href="../css/skins/default.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="../js/agility-design.js"></script>
