Changed the format of code fields.

--- a/examples/01-grids.html
+++ b/examples/01-grids.html
@@ -41,13 +41,13 @@
 				<h1 class="display4 text-center">Large grid example</h1>
 				<div class="grid-large">
 					<div class="col-4 background-red">
-						<h3>First column</h3>
+						<h3 class="text-center">First column</h3>
 					</div>
 					<div class="col-4 background-blue">
-						<h3>Second column</h3>
+						<h3 class="text-center">Second column</h3>
 					</div>
 					<div class="col-4 background-green">
-						<h3>Third column</h3>
+						<h3 class="text-center">Third column</h3>
 					</div>
 				</div>
 			</div>
@@ -56,13 +56,13 @@
 				<h1 class="display4 text-center">Small grid example</h1>
 				<div class="grid-small">
 					<div class="col-4 background-red">
-						<h5>First column</h5>
+						<h5 class="text-center">First column</h5>
 					</div>
 					<div class="col-4 background-blue">
-						<h5>Second column</h5>
+						<h5 class="text-center">Second column</h5>
 					</div>
 					<div class="col-4 background-green">
-						<h5>Third column</h5>
+						<h5 class="text-center">Third column</h5>
 					</div>
 				</div>
 			</div>
@@ -80,19 +80,18 @@
 					<div class="panel panel-clear">
 						<h4 class="panel-header text-center center">Boostrap</h4>
 						<div class="panel-body">
-							<pre class="code-field"><code>
-<span>&lt;div class="<b>row</b>"&gt;</span>
-<span>	&lt;div class="<b>col-sm-4</b>"&gt;</span>
-<span>		&lt;h4&gt;First column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>	&lt;div class="<b>col-sm-4</b>"&gt;</span>
-<span>		&lt;h4&gt;Second column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>	&lt;div class="<b>col-sm-4</b>"&gt;</span>
-<span>		&lt;h4&gt;Third column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>&lt;/div&gt;</span>
-							</code></pre>
+							<pre class="code-field">
+&lt;div class="<b>row</b>"&gt;
+	&lt;div class="<b>col-sm-4</b>"&gt;
+		&lt;h4&gt;First column.&lt;/h4&gt;
+	&lt;/div&gt;
+	&lt;div class="<b>col-sm-4</b>"&gt;
+		&lt;h4&gt;Second column.&lt;/h4&gt;
+	&lt;/div&gt;
+	&lt;div class="<b>col-sm-4</b>"&gt;
+		&lt;h4&gt;Third column.&lt;/h4&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</pre>
 						</div>
 					</div>
 				</div>
@@ -100,19 +99,18 @@
 					<div class="panel panel-clear">
 						<h4 class="panel-header text-center center">Agility Design</h4>
 						<div class="panel-body">
-							<pre class="code-field"><code>
-<span>&lt;div class="<b>grid grid-small</b>"&gt;</span>
-<span>	&lt;div class="<b>col-4</b>"&gt;</span>
-<span>		&lt;h4&gt;First column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>	&lt;div class="<b>col-4</b>"&gt;</span>
-<span>		&lt;h4&gt;Second column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>	&lt;div class="<b>col-4</b>"&gt;</span>
-<span>		&lt;h4&gt;Third column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>&lt;/div&gt;</span>
-							</code></pre>
+							<pre class="code-field">
+&lt;div class="<b>grid grid-small</b>"&gt;
+	&lt;div class="<b>col-4</b>"&gt;
+		&lt;h4&gt;First column.&lt;/h4&gt;
+	&lt;/div&gt;
+	&lt;div class="<b>col-4</b>"&gt;
+		&lt;h4&gt;Second column.&lt;/h4&gt;
+	&lt;/div&gt;
+	&lt;div class="<b>col-4</b>"&gt;
+		&lt;h4&gt;Third column.&lt;/h4&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</pre>
 						</div>
 					</div>
 				</div>
@@ -120,19 +118,18 @@
 					<div class="panel panel-clear">
 						<h4 class="panel-header text-center center">Foundation</h4>
 						<div class="panel-body">
-							<pre class="code-field"><code>
-<span>&lt;div class="<b>grid-x</b>"&gt;</span>
-<span>	&lt;div class="<b>cell small-4</b>"&gt;</span>
-<span>		&lt;h4&gt;First column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>	&lt;div class="<b>cell small-4</b>"&gt;</span>
-<span>		&lt;h4&gt;Second column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>	&lt;div class="<b>cell small-4</b>"&gt;</span>
-<span>		&lt;h4&gt;Third column.&lt;/h4&gt;</span>
-<span>	&lt;/div&gt;</span>
-<span>&lt;/div&gt;</span>
-							</code></pre>
+							<pre class="code-field">
+&lt;div class="<b>grid-x</b>"&gt;
+	&lt;div class="<b>cell small-4</b>"&gt;
+		&lt;h4&gt;First column.&lt;/h4&gt;
+	&lt;/div&gt;
+	&lt;div class="<b>cell small-4</b>"&gt;
+		&lt;h4&gt;Second column.&lt;/h4&gt;
+	&lt;/div&gt;
+	&lt;div class="<b>cell small-4</b>"&gt;
+		&lt;h4&gt;Third column.&lt;/h4&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</pre>
 						</div>
 					</div>
 				</div>
