--- a/made-with-agility/bold/index.html
+++ b/made-with-agility/bold/index.html
@@ -47,7 +47,17 @@
                 animation: next-page 1s ease-out 4s 1 normal both;
             }
 
-            @media (max-width:766px) {
+            div.background-image {
+                background-image: url("img/background.jpg");
+                background-repeat: no-repeat;
+                background-size: auto;
+                width: 100%;
+                height: 100%;
+                position: fixed;
+                z-index: -99;
+            }
+
+            @media (max-width:775px) {
                 h4, p {
                     text-align: center;
                 }
@@ -57,26 +67,26 @@
                     margin-left: auto;
                     margin-right: auto;
                 }
+
+                .menu a {
+                    font-size: 0.75em;
+                }
             }
         </style>
 	</head>
 	<body>
         <p class="icon-logical-or next-page"></p>
-        <!--div class="navbar navbar-white navbar-fixed navbar-small navbar-auto fade-in-on-load">
-            <a class="navbar-item text-small" href="#">Home</a>
-            <a class="navbar-item text-small" href="#">Products</a>
-            <a class="navbar-item text-small" href="#">Blog</a>
-            <a class="navbar-item text-small" href="#">Contact</a>
-        </div>-->
-        <div class="menu menu-center menu-fixed">
+        <div class="menu menu-center menu-fixed fade-in-on-load" style="padding: 2em;">
             <a class="text-small color-dark-white" href="#">Home</a>
             <a class="text-small color-dark-white" href="#">Products</a>
             <a class="text-small color-dark-white" href="#">Blog</a>
             <a class="text-small color-dark-white" href="#">Contact</a>
         </div>
 
-        <div class="container-fullscreen background-dark-black">
-            <div class="container-fullscreen container-center background-dark-black">
+        <div class="background-image"></div>
+
+        <div class="container-fullscreen">
+            <div class="container-fullscreen container-center">
                 <div class="title-container text-center animation-group" data-delay-initial="0.75" data-delay-incremental="1.3" data-duration="1">
                     <h4 class="text-mega color-white animate-fade-from-top" style="margin-bottom: 0.5em">Bold</h4>
                     <h6 class="color-dark-white text-tiny text-thin animate-fade-from-top">Made with Agility Design</h6>
