--- a/examples/03-platfoms.html
+++ b/examples/03-platfoms.html
@@ -32,6 +32,8 @@
 		<script src="../js/agility-design.js"></script>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
+		<a href="02-images.html" class="navigation-arrow color-blue left"></a>
+		<a href="04-communication.html" class="navigation-arrow color-blue right"></a>
 		<div class="title-container container">
 			<h1 class="title text-center">Example 03</h1>
 			<h1 class="subtitle text-center">Platforms</h1>
