--- a/examples/04-communication.html
+++ b/examples/04-communication.html
@@ -32,6 +32,8 @@
 		<script src="../js/agility-design.js"></script>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
+		<a href="03-platfoms.html" class="navigation-arrow color-blue left"></a>
+		<a href="05-buttons.html" class="navigation-arrow color-blue right"></a>
 		<div class="communication-content-medium text-center">
 			<div class="communication-block communication-block-center">
 				<div class="container">
@@ -40,7 +42,7 @@
 					<h6 class="text-extrathin">Look like the big boys!</h6>
 				</div>
 			</div>
-			<div class="communication-block communication-block-center background-blue">
+			<div class="communication-block communication-block-center background-red">
 				<div class="container">
 					<h2 class="center color-white">Secondary.</h2>
 					<h6 class="center color-white text-extrathin">Try resizing the browser window or view from a mobile device.</h6>
