--- a/examples/06-input.html
+++ b/examples/06-input.html
@@ -32,6 +32,8 @@
 		<script src="../js/agility-design.js"></script>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
+		<a href="05-buttons.html" class="navigation-arrow color-blue left"></a>
+		<a href="07-panels.html" class="navigation-arrow color-blue right"></a>
 		<div class="title-container container">
 			<h1 class="title text-center">Example 06</h1>
 			<h4 class="subtitle text-center">Input</h4>
