--- a/examples/10-navigation.html
+++ b/examples/10-navigation.html
@@ -30,8 +30,14 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="../js/agility-design.js"></script>
+		<style>
+			.navigation-arrow {
+				top: 56px;
+			}
+		</style>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
+		<a href="09-notifications.html" class="navigation-arrow color-blue left"></a>
 		<nav class="navbar navbar-red navbar-medium">
 			<img src="https://via.placeholder.com/150" class="icon"/>
 			<a class="navbar-item" href="../index.html">Index</a>
