--- a/examples/08-tables.html
+++ b/examples/08-tables.html
@@ -32,6 +32,8 @@
 		<script src="../js/agility-design.js"></script>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
+		<a href="07-panels.html" class="navigation-arrow color-blue left"></a>
+		<a href="09-notifications.html" class="navigation-arrow color-blue right"></a>
 		<div class="title-container container">
 			<h1 class="title text-center">Example 08</h1>
 			<h1 class="subtitle text-center">Tables</h1>
