--- a/examples/09-notifications.html
+++ b/examples/09-notifications.html
@@ -32,6 +32,8 @@
 		<script src="../js/agility-design.js"></script>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
+		<a href="08-tables.html" class="navigation-arrow color-blue left"></a>
+		<a href="10-navigation.html" class="navigation-arrow color-blue right"></a>
 		<div class="title-container container">
 			<h1 class="title text-center">Example 09</h1>
 			<h1 class="subtitle text-center">Notifications</h1>
