New example added, 'Colorful'.

--- a/index.html
+++ b/index.html
@@ -49,142 +49,172 @@
 			}
 		</style>
 	</head>
-	<body class="fade-on-leave fade-on-load" fade-duration="1">
-		<div class="title-container container">
+	<body class="fade-on-leave" fade-duration="0.5">
+		<div class="title-container container fade-in-on-load">
 			<h6 class="title text-center">Table of Contents</h6>
 			<h6 class="subtitle text-center">Agility Design</h6>
 		</div>
 		<div class="container">
-		<div class="container animation-group" data-delay-initial="0.6" data-delay-incremental="0.4">
-			<div class="grid grid-medium grid-align-center text-center animate-fade-in">
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/01-grids.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Grids">
-									<h6>01 - Grids</h6>
+			<div class="container animation-group" data-delay-initial="0.6" data-delay-incremental="0.4">
+				<h3 class="text-center animate-fade-in">Made with Agility</h3>
+				<div class="grid grid-medium grid-align-center text-center animate-fade-in">
+					<div class="col-6">
+						<div class="panel-container">
+							<a href="made-with-agility/bold/index.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://i.imgur.com/hmOiyaX.png">
+										<h5>Bold</h5>
+										<i class="image-comment">Made by Mads T. Kristiansen, 2019</i>
+									</div>
 								</div>
-							</div>
-						</a>
+							</a>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="panel-container">
+							<a href="made-with-agility/colorful/index.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://i.imgur.com/iLcDDQm.png">
+										<h5>Colorful</h5>
+										<i class="image-comment">Made by Mads T. Kristiansen, 2019</i>
+									</div>
+								</div>
+							</a>
+						</div>
 					</div>
 				</div>
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/02-images.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Images">
-									<h6>02 - Images</h6>
+				<h3 class="text-center animate-fade-in">Showcase</h3>
+				<div class="grid grid-medium grid-align-center text-center animate-fade-in">
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/01-grids.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Grids">
+										<h6>01 - Grids</h6>
+									</div>
 								</div>
-							</div>
-						</a>
+							</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/02-images.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Images">
+										<h6>02 - Images</h6>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/03-platfoms.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Platforms">
+										<h6>03 - Platforms</h6>
+									</div>
+								</div>
+							</a>
+						</div>
 					</div>
 				</div>
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/03-platfoms.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Platforms">
-									<h6>03 - Platforms</h6>
+				<div class="grid grid-medium grid-align-center text-center animate-fade-in">
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/04-communication.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Communication">
+										<h6>04 - Communication</h6>
+									</div>
 								</div>
-							</div>
-						</a>
+							</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/05-buttons.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Buttons">
+										<h6>05 - Buttons</h6>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/06-input.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Input">
+										<h6>06 - Input</h6>
+									</div>
+								</div>
+							</a>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="grid grid-medium grid-align-center text-center animate-fade-in">
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/04-communication.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Communication">
-									<h6>04 - Communication</h6>
+				<div class="grid grid-medium grid-align-center text-center animate-fade-in">
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/07-panels.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Panels">
+										<h6>07 - Panels</h6>
+									</div>
 								</div>
-							</div>
-						</a>
+							</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/08-tables.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Tables">
+										<h6>08 - Tables</h6>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/09-notifications.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Notifications">
+										<h6>09 - Notifications</h6>
+									</div>
+								</div>
+							</a>
+						</div>
 					</div>
 				</div>
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/05-buttons.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Buttons">
-									<h6>05 - Buttons</h6>
+				<div class="grid grid-medium grid-align-center text-center animate-fade-in">
+					<div class="col-4">
+						<div class="panel-container">
+							<a href="examples/10-navigation.html">
+								<div class="panel panel-clear">
+									<div class="panel-body">
+										<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Navigation">
+										<h6>10 - Navigation</h6>
+									</div>
 								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/06-input.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Input">
-									<h6>06 - Input</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="grid grid-medium grid-align-center text-center animate-fade-in">
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/07-panels.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Panels">
-									<h6>07 - Panels</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/08-tables.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Tables">
-									<h6>08 - Tables</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/09-notifications.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Notifications">
-									<h6>09 - Notifications</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="grid grid-medium grid-align-center text-center animate-fade-in">
-				<div class="col-4">
-					<div class="panel-container">
-						<a href="examples/10-navigation.html">
-							<div class="panel panel-clear">
-								<div class="panel-body">
-									<img class="panel-image" src="https://via.placeholder.com/150/FFFFFF/808080?text=Navigation">
-									<h6>10 - Navigation</h6>
-								</div>
-							</div>
-						</a>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</body>
 </html>
